11- Apr 2005
	- Change package name to pam-pkcs11
	- Change directory names according with package name
	- Rewrite pwent mapper to use cert_info library

08- Apr 2005
	- Some typos in some messages
	- Make sources more "gcc -pedantic" friendly.
	- Changes in DBG(X) macros, to be C99 compliant

07- Apr 2005
	- pkcs11_login-0.5.1 is out
	- Fix configure.in AM_MAINTAINER_MODE
	- Makefile fixes
	- Fix some typos and sample files

02- Apr 2005
	- pkcs11_login-0.5 is out
	- Mail mapper rewritten to use cert_info lib
	- First works on mapper api:
		. create structs and macros in mapper.h
		. rewrite mappers to initialize mapper_module_st entries
	- Published roadmap to 1.0 version. See TODO file
	- Fix: Dont free key/value map entries, as they come from buffer entry

31- Mar 2005
	- Added CA & CRL mgmnt doc to manual
	- Chaged  ocurrences of "if (!x) free(x)" to "free(x)" as glibc 
	  already does propper null check
	- Finished krb_mapper ( no pkinit, just kpn -> login map ).
	  NOTE: I assume that KPN is stored as ASN1_STRING, but cannot
	  deduce it from RFC's
	- MS mapper rewriten to use cert_info lib

29- Mar 2005
	- Manual rewritten in xml format
	- Check for manual in html format. Re-generate if not present
	- pkcs11_eventmgr: reset time_counter on expire() event fixed
	- Update .spec file to release 0.5-0

28- Mar 2005
	- pkcs11_login-0.5beta1 is out
	- Manual and web page updated

22- Mar 2005
	- recoded cn and krb mappers to use cert_info library
	- buxfix in conf file

20- Mar 2005
	- New tool: pkcs11_inspect, to see contents of certificate
	- Man pages: several typos and bugfixes
	- Recoded uid mapper to use cert_info library

18- Mar 2005
	- No more warns in compile: fix "-no-strict-alias" cflag when
	linking with /usr/lib/libpam.so
	- Several bugfixes and configuration files typos. 
	- Updated .spec file
	- New files cert_info.[ch] to get and show cert contents.
	This will allow coding of some tools to inspect certificates 
	without loading mapper modules