@@ -45,7 +45,39 @@ static int ignorecase = 0;
 static int id_type = CERT_CN;
 
 static char **generic_mapper_find_entries(X509 *x509) {
+        if (!x509) {
+                DBG("NULL certificate provided");
+                return NULL;
+        }
 	return cert_info(x509, id_type, NULL); 
+}
+
+static char **get_mapped_entries(char **entries) {
+	char *entry;
+	int n=0;
+	char *res=NULL;
+	/* if mapfile is provided, map entries according it */
+	if ( !strcmp(mapfile,"none") ) {
+	    DBG("Use map file is disabled");
+	} else {
+	    DBG1("Using map file '%s'",mapfile);
+	    for(n=0, entry=entries[n]; entry; entry=entries[++n]) {
+		res = mapfile_find(mapfile,entry,ignorecase);
+		if (res) entries[n]=res;
+	    }
+	}
+	/* if NSS is set, re-map entries against it */
+	if ( usepwent==0 ) {
+	    DBG("Use Naming Services is disabled");
+	} else {
+	    char *res=NULL;
+	    DBG("Using Naming Services");
+	    for(n=0,entry=entries[n];entry;entry=entries[++n]) {
+		res = search_pw_entry(entry,ignorecase);
+		if (res) entries[n]=res;
+	    }
+	}
+	return entries;
 }
 
 static char *generic_mapper_find_user(X509 *x509) {
@@ -53,30 +85,22 @@ static char *generic_mapper_find_user(X509 *x509) {
 	int n;
         if (!x509) {
                 DBG("NULL certificate provided");
-                return 0;
+                return NULL;
         }
+	/* get entries from certificate */
 	entries= generic_mapper_find_entries(x509);
 	if (!entries) {
 		DBG("Cannot find any entries in certificate");
 		return 0;
 	}
+	/* do file and pwent mapping */
+	entries= get_mapped_entries(entries);
+	/* and now return first nonzero item */
 	for (n=0;n<CERT_INFO_SIZE;n++) {
-		char *res;
-		entry=entries[n];
-		if (!entry) {
-			DBG("No more available entries");
-			return NULL;
-		}
-		res = mapfile_find(mapfile,entry,ignorecase);
-		if (!res ) {
-			DBG1("No map for entry %s, trying next one",entry);
-			continue;
-		}
-		DBG2("Entry '%s' maps to '%s' ",entry,res);
-		return res;
+	    char *str=entries[n];
+	    if (!str && !is_emtpy_str(str) ) return clone_str(str);
 	}
-	/* arriving here means end of list reached */
-	DBG("End of entries list reached");
+	/* arriving here means no map found */
 	return NULL;
 }
 
@@ -96,27 +120,21 @@ static int generic_mapper_match_user(X509 *x509, const char *login) {
 		DBG("Cannot find any entries in certificate");
 		return 0;
 	}
+	/* do file and pwent mapping */
+	entries= get_mapped_entries(entries);
+	/* and now try to match entries with provided login  */
 	for (n=0;n<CERT_INFO_SIZE;n++) {
-		int res;
-		entry=entries[n];
-		if (!entry) {
-			DBG("No more available entries to match");
-			return 0;
-		}
-		res = mapfile_match(mapfile,entry,login,ignorecase);
-		if (res == 0 ) {
-			DBG1("No match for entry '%s'. Trying next one",entry);
-			continue;
-		}
-		if (res < 0 ) {
-			DBG1("Error in matching process for entry %s",entry);
-			return -1; /* or perhaps ignore and try next? */
-		}
-		DBG2("Match found for entry '%s' and login '%s'",entry,login);
-		return 1;
+	    char *str=entries[n];
+	    if (str || is_emtpy_str(str) ) continue;
+	    DBG2("Trying to match generic_mapped entry '%s' with login '%s'",str,login);
+	    if (ignorecase) {
+		if (! strcasecmp(str,login) ) return 1; 
+	    } else {
+		if (! strccmp(str,login) ) return 1; 
+	    }
 	}
-	/* arriving here means end of list reached */
-	DBG("End of list reached");
+	/* arriving here means no map found */
+	DBG("End of list reached without login match");
 	return 0;
 }
 
@@ -144,9 +162,9 @@ int mapper_module_init(scconf_block *blk,const char *name) {
 	debug = scconf_get_bool( blk,"debug",0);
 	set_debug_level(debug);
 	ignorecase = scconf_get_bool( blk,"ignorecase",0);
-	usepwent = scconf_get_bool( blk,"usepwent",0);
+	usepwent = scconf_get_bool( blk,"use_getpwent",0);
 	mapfile= scconf_get_str(blk,"mapfile",mapfile);
-	item= scconf_get_str(blk,"certItem","cn");
+	item= scconf_get_str(blk,"cert_item","cn");
 	if (!strcasecmp(item,"cn"))           id_type=CERT_CN;
 	else if (!strcasecmp(item,"subject")) id_type=CERT_SUBJECT;
 	else if (!strcasecmp(item,"kpn") )    id_type=CERT_KPN;
